[gd_scene load_steps=7 format=2]

[ext_resource path="res://grafica/Eventos/inimigo_medio/arma.png" type="Texture" id=1]
[ext_resource path="res://grafica/Eventos/inimigo_medio/cabine.png" type="Texture" id=2]
[ext_resource path="res://grafica/Eventos/inimigo_medio/motor.png" type="Texture" id=4]
[ext_resource path="res://prefebs/enemies/toreta_enemie.gd" type="Script" id=5]
[ext_resource path="res://grafica/Eventos/inimigo_grand/Efeito_tiro.png" type="Texture" id=7]

[sub_resource type="CapsuleShape2D" id=1]
radius = 16.0203
height = 15.9094

[node name="Move_enemy_controler" type="Area2D"]
script = ExtResource( 5 )

[node name="Asa_esquerda" type="Node2D" parent="."]
position = Vector2( 17, 6 )
scale = Vector2( 0.5, 0.5 )
z_index = 1

[node name="Arma" type="Sprite" parent="Asa_esquerda"]
position = Vector2( -14, -8 )
texture = ExtResource( 1 )
offset = Vector2( 14.1618, 8.41712 )
flip_h = true
flip_v = true

[node name="EfeitoTiro" type="Sprite" parent="Asa_esquerda/Arma"]
position = Vector2( 14, 22 )
texture = ExtResource( 7 )

[node name="Position2D" type="Position2D" parent="Asa_esquerda/Arma"]
position = Vector2( -10.0284, 7.96434 )
scale = Vector2( 2, 2 )

[node name="Asa_direita" type="Node2D" parent="."]
position = Vector2( -16, 6 )
scale = Vector2( 0.5, 0.5 )
z_index = 1

[node name="Arma" type="Sprite" parent="Asa_direita"]
position = Vector2( 12, -8 )
texture = ExtResource( 1 )
offset = Vector2( -13.0207, 7.86725 )
flip_v = true

[node name="EfeitoTiro2" type="Sprite" parent="Asa_direita/Arma"]
position = Vector2( -14, 22 )
texture = ExtResource( 7 )

[node name="Position2D2" type="Position2D" parent="Asa_direita/Arma"]
position = Vector2( -14, 20 )
rotation = -0.00118005
scale = Vector2( 2, 2 )

[node name="cabine" type="Position2D" parent="."]
position = Vector2( 0, 4.57764e-05 )
z_index = 1

[node name="Motor" type="Sprite" parent="cabine"]
position = Vector2( -4.17233e-07, -14 )
scale = Vector2( 0.55, 0.5 )
texture = ExtResource( 4 )
offset = Vector2( 0.732687, -10.4828 )

[node name="fuego" type="Sprite" parent="cabine/Motor"]
position = Vector2( 0, -20 )
rotation = 3.14159
scale = Vector2( 2, 2 )
z_index = -1
texture = ExtResource( 7 )

[node name="Cabine" type="Sprite" parent="cabine"]
position = Vector2( 0, -4.57764e-05 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( -6, -1 )
rotation = 1.56853
z_index = 1
shape = SubResource( 1 )
